--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,51 +1,37 @@
 /* Estilo general */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #ece4e4;
     margin: 0;
     padding: 0;
     display: flex;
+    
 }
 
-/* Barra lateral */
+
+.container {
+    display: flex;
+}
+
 .sidebar {
     width: 250px;
-    background-color: #007BFF;
+    background-color: #2039c4;
     color: white;
     height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
     padding: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 0 5px rgba(209, 19, 19, 0.1);
+   
     overflow-y: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column; 
+    /* Cambiar a relative para evitar superposiciones */
 }
 
-.sidebar h2 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.sidebar-link {
-    display: block;
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    margin: 5px 0;
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.sidebar-link:hover {
-    background-color: #0056b3;
-    color: #e9ecef;
-}
-
-/* Contenido principal */
 .main-content {
-    margin-left: 250px;
+    flex-grow: 1;
     padding: 20px;
-    width: calc(100% - 250px);
+    background-color: #f8f9fa;
 }
 
 /* Encabezado */
@@ -132,7 +118,7 @@ input[type="text"], select {
 }
 
 button {
-    margin-top: 20px;
+    margin-top: 100px;
     padding: 12px 24px;
     background-color: #007BFF;
     color: white;
@@ -145,4 +131,29 @@ button {
 
 button:hover {
     background-color: #0056b3;
+}
+.btn-agregar {
+    display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 1000px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #306ad8;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.btn-agregar:hover {
+    background-color: #0a19e2;
+    transform: translateY(-2px);
+}
+
+.btn-agregar:active {
+    background-color: #1e7e34;
+    transform: translateY(0);
 }
