--- a/app/templates/clientes/index.html
+++ b/app/templates/clientes/index.html
@@ -8,33 +8,48 @@
     <title>Cliente</title>
 </head>
 <body>
-    <h1>Lista de Cliente</h1>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Telefono</th>
-            <th>Direccion</th>
-            <th>Acciones</th>
-        </tr>
-        {% for cliente in data %}
+    <div class="sidebar">
+        <h2>Menú</h2>
+        <a href="{{ url_for('renta.index') }}" class="sidebar-link">Renta</a>
+        <a href="{{ url_for('cliente.index') }}" class="sidebar-link">Cliente</a>
+        <a href="{{ url_for('empleado.index') }}" class="sidebar-link">Empleados</a>
+        <a href="{{ url_for('detalle_renta.index') }}" class="sidebar-link">Detalle Renta</a>
+        <a href="{{ url_for('inventario.index') }}" class="sidebar-link">Inventario</a>
+        <a href="{{ url_for('pelicula.index') }}" class="sidebar-link">Película</a>
+        <a href="{{ url_for('genero.index') }}" class="sidebar-link">Género</a>
+        <a href="{{ url_for('director.index') }}" class="sidebar-link">Director</a>
+    </div>
+    <div class="main-content">
+
+         <h1>Lista de Cliente</h1>
+         <table>
             <tr>
-                <td>{{ cliente.idCliente }}</td>
-                <td>{{ cliente.nombre }}</td>
-                <td>{{ cliente.apellido }}</td>
-                <td>{{ cliente.telefono }}</td>
-                <td>{{ cliente.direccion }}</td>
-                <td>
-                    <a href="{{ url_for('cliente.edit', idCliente=cliente.idCliente) }}">Editar</a>
-                    <a href="{{ url_for('cliente.delete', idCliente=cliente.idCliente) }}">Eliminar</a>
-                    
-                </td>
+               <th>ID</th>
+               <th>Nombre</th>
+               <th>Apellido</th>
+               <th>Telefono</th>
+               <th>Direccion</th>
+               <th>Acciones</th>
             </tr>
-        {% endfor %}
-    </table>
-    <a href="{{ url_for('cliente.add') }}">Agregar Cliente</a>
+            {% for cliente in data %}
+                <tr>
+                   <td>{{ cliente.idCliente }}</td>
+                   <td>{{ cliente.nombre }}</td>
+                   <td>{{ cliente.apellido }}</td>
+                   <td>{{ cliente.telefono }}</td>
+                   <td>{{ cliente.direccion }}</td>
+                   <td>
+                      <a href="{{ url_for('cliente.edit', idCliente=cliente.idCliente) }}">Editar</a>
+                      <a href="{{ url_for('cliente.delete', idCliente=cliente.idCliente) }}">Eliminar</a>
+                    
+                    </td>
+                </tr>
+            {% endfor %}
+         </table>
+         <a href="{{ url_for('cliente.add') }}" class="btn-agregar">Agregar Cliente</a>
+    </div>
+    
     <br>
-    <a href="{{ url_for('renta.index') }}">Ir a Renta</a>
+    
 </body>
 </html>
