--- a/app/templates/directores/index.html
+++ b/app/templates/directores/index.html
@@ -8,27 +8,42 @@
     <title>Director</title>
 </head>
 <body>
-    <h1>Lista de Director</h1>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Acciones</th>
-        </tr>
-        {% for director in data %}
+    <div class="sidebar">
+        <h2>Menú</h2>
+        <a href="{{ url_for('renta.index') }}" class="sidebar-link">Renta</a>
+        <a href="{{ url_for('cliente.index') }}" class="sidebar-link">Cliente</a>
+        <a href="{{ url_for('empleado.index') }}" class="sidebar-link">Empleados</a>
+        <a href="{{ url_for('detalle_renta.index') }}" class="sidebar-link">Detalle Renta</a>
+        <a href="{{ url_for('inventario.index') }}" class="sidebar-link">Inventario</a>
+        <a href="{{ url_for('pelicula.index') }}" class="sidebar-link">Película</a>
+        <a href="{{ url_for('genero.index') }}" class="sidebar-link">Género</a>
+        <a href="{{ url_for('director.index') }}" class="sidebar-link">Director</a>
+    </div>
+    <div class="main-content">
+
+        <h1>Lista de Director</h1>
+        <table>
             <tr>
-                <td>{{ director.idDirector }}</td>
-                <td>{{ director.nombre }}</td>             
-                <td>
-                    <a href="{{ url_for('director.edit', idDirector=director.idDirector) }}">Editar</a>
-                    <a href="{{ url_for('director.delete',idDirector =director.idDirector) }}">Eliminar</a>
-                    
-                </td>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Acciones</th>
             </tr>
-        {% endfor %}
-    </table>
-    <a href="{{ url_for('director.add') }}">Agregar Director</a>
+            {% for director in data %}
+                <tr>
+                    <td>{{ director.idDirector }}</td>
+                    <td>{{ director.nombre }}</td>             
+                    <td>
+                       <a href="{{ url_for('director.edit', idDirector=director.idDirector) }}">Editar</a>
+                       <a href="{{ url_for('director.delete',idDirector =director.idDirector) }}">Eliminar</a>
+                    
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+        <a href="{{ url_for('director.add') }}" class="btn-agregar">Agregar Director</a>
+    </div>
+    
     <br>
-    <a href="{{ url_for('renta.index') }}">Ir a Renta</a>
+   
 </body>
 </html>
