--- a/app/templates/empleados/index.html
+++ b/app/templates/empleados/index.html
@@ -8,33 +8,47 @@
     <title>Empleado</title>
 </head>
 <body>
-    <h1>Lista de Empleados </h1>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Telefono</th>
-            <th>Correo</th>
-            <th>Acciones</th>
-        </tr>
-        {% for empleado in data %}
+    <div class="sidebar">
+        <h2>Menú</h2>
+        <a href="{{ url_for('renta.index') }}" class="sidebar-link">Renta</a>
+        <a href="{{ url_for('cliente.index') }}" class="sidebar-link">Cliente</a>
+        <a href="{{ url_for('empleado.index') }}" class="sidebar-link">Empleados</a>
+        <a href="{{ url_for('detalle_renta.index') }}" class="sidebar-link">Detalle Renta</a>
+        <a href="{{ url_for('inventario.index') }}" class="sidebar-link">Inventario</a>
+        <a href="{{ url_for('pelicula.index') }}" class="sidebar-link">Película</a>
+        <a href="{{ url_for('genero.index') }}" class="sidebar-link">Género</a>
+        <a href="{{ url_for('director.index') }}" class="sidebar-link">Director</a>
+    </div>
+    <div class="main-content">
+        <h1>Lista de Empleados </h1>
+        <table>
             <tr>
-                <td>{{ empleado.idEmpleado }}</td>
-                <td>{{ empleado.nombre }}</td>
-                <td>{{ empleado.apellido }}</td>
-                <td>{{ empleado.telefono }}</td>
-                <td>{{ empleado.direccion }}</td>
-                <td>
-                    <a href="{{ url_for('empleado.edit', idEmpleado=empleado.idEmpleado) }}">Editar</a>
-                    <a href="{{ url_for('empleado.delete', idEmpleado=empleado.idEmpleado) }}">Eliminar</a>
-                    
-                </td>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Telefono</th>
+                <th>Correo</th>
+                <th>Acciones</th>
             </tr>
-        {% endfor %}
-    </table>
-    <a href="{{ url_for('empleado.add') }}">Agregar Empleado</a>
+            {% for empleado in data %}
+                <tr>
+                    <td>{{ empleado.idEmpleado }}</td>
+                    <td>{{ empleado.nombre }}</td>
+                    <td>{{ empleado.apellido }}</td>
+                    <td>{{ empleado.telefono }}</td>
+                    <td>{{ empleado.direccion }}</td>
+                    <td>
+                       <a href="{{ url_for('empleado.edit', idEmpleado=empleado.idEmpleado) }}">Editar</a>
+                       <a href="{{ url_for('empleado.delete', idEmpleado=empleado.idEmpleado) }}">Eliminar</a>
+                    
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+        <a href="{{ url_for('empleado.add') }}"class="btn-agregar">Agregar Empleado</a>
+    </div>
+    
     <br>
-    <a href="{{ url_for('renta.index') }}">Ir a Renta </a>
+    
 </body>
 </html>
